--- a/template/page/header/minicart/product-item/remove.phtml
+++ b/template/page/header/minicart/product-item/remove.phtml
@@ -6,5 +6,5 @@
  */
 ?>
 <div class="product-list__item__remove"
-     data-action="remove-product"
+     data-click-action="remove-product"
      data-item-id="<?= escape($id) ?>"></div>
