--- a/template/page/header/search.phtml
+++ b/template/page/header/search.phtml
@@ -1,1 +1,1 @@
-<div class="header__icon icon icon-search" data-action="open-search"></div>
+<div class="header__icon icon icon-search" data-click-action="open-search"></div>
