--- a/template/page/header/search/overlay.phtml
+++ b/template/page/header/search/overlay.phtml
@@ -1,1 +1,1 @@
-<div class="search__overlay" data-action="close-search"></div>
+<div class="search__overlay" data-click-action="close-search"></div>
