--- a/template/page/menu.phtml
+++ b/template/page/menu.phtml
@@ -8,7 +8,7 @@
     <div class="mobile-overlay__title__container">
         <span class="mobile-overlay__title"><?= phrase('Menu') ?></span>
         <!-- Close mobile menu -->
-        <div class="icon" data-action="toggle-overlay" data-overlay-id="menu"></div>
+        <div class="icon" data-click-action="toggle-overlay" data-overlay-id="menu"></div>
     </div>
     <?= block('item', ['item' => $page->menu]) ?>
 </nav>
