--- a/template/product/cta/add-to-cart.phtml
+++ b/template/product/cta/add-to-cart.phtml
@@ -7,7 +7,7 @@
 ?>
 <div <?= $block->attributes() ?> data-product-id="<?= $product->entityId() ?>">
     <?= block('options') ?>
-    <button type="button" class="btn-cart" data-action="add-to-cart">
+    <button type="button" class="btn-cart" data-click-action="add-to-cart">
         <span><?= phrase('Add to Cart') ?></span>
     </button>
 </div>
