--- a/template/page/header/mobile-menu-toggle.phtml
+++ b/template/page/header/mobile-menu-toggle.phtml
@@ -1,1 +1,1 @@
-<div class="header__open-menu" data-action="toggle-overlay" data-overlay-id="menu"></div>
+<div class="header__open-menu" data-click-action="toggle-overlay" data-overlay-id="menu"></div>
