--- a/template/category/details.phtml
+++ b/template/category/details.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Category $category
+ * @var Lightna\Magento\Backend\Data\Category $category
  */
 ?>
 <h1>
