--- a/template/cms/content.phtml
+++ b/template/cms/content.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Cms $entity
+ * @var Lightna\Magento\Backend\Data\Cms $entity
  */
 ?>
 <?= $entity->content ?>
