--- a/template/component/product/discount.phtml
+++ b/template/component/product/discount.phtml
@@ -1,8 +1,8 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Product $product
- * @var Lightna\Magento\Data\Currency $currency
+ * @var Lightna\Magento\Backend\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Currency $currency
  */
 ?>
 <?php if ($product->price->discount > 0): ?>
