--- a/template/component/product/price.phtml
+++ b/template/component/product/price.phtml
@@ -2,8 +2,8 @@
 /**
  * Import:
  * @var Lightna\Engine\Data\Block $block
- * @var Lightna\Magento\Data\Product $product
- * @var Lightna\Magento\Data\Currency $currency
+ * @var Lightna\Magento\Backend\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Currency $currency
  */
 ?>
 <div <?= $block->attributes() ?>>
