--- a/template/page.phtml
+++ b/template/page.phtml
@@ -2,7 +2,7 @@
 /**
  * Import:
  * @var Lightna\Engine\Data\Block $block
- * @var Lightna\Magento\Data\Config $config
+ * @var Lightna\Magento\Backend\Data\Config $config
  */
 ?>
 <!DOCTYPE html>
