--- a/template/page/head/link/favicon.phtml
+++ b/template/page/head/link/favicon.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Config $config
+ * @var Lightna\Magento\Backend\Data\Config $config
  */
 $favicon = $config->favicon;
 ?>
