--- a/template/page/header/minicart.phtml
+++ b/template/page/header/minicart.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Session $session
+ * @var Lightna\Magento\Backend\Data\Session $session
  */
 $cart = $session->cart;
 ?>
