--- a/template/page/header/minicart/footer.phtml
+++ b/template/page/header/minicart/footer.phtml
@@ -1,8 +1,8 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Session $session
- * @var Lightna\Magento\Data\Currency $currency
+ * @var Lightna\Magento\Backend\Data\Session $session
+ * @var Lightna\Magento\Backend\Data\Currency $currency
  */
 
 $cart = $session->cart;
