--- a/template/page/header/minicart/product-item/price.phtml
+++ b/template/page/header/minicart/product-item/price.phtml
@@ -1,8 +1,8 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Session\Cart\Item $item
- * @var Lightna\Magento\Data\Currency $currency
+ * @var Lightna\Magento\Backend\Data\Session\Cart\Item $item
+ * @var Lightna\Magento\Backend\Data\Currency $currency
  */
 ?>
 <span class="product-list__item__price">
