--- a/template/page/header/minicart/product-item/remove.phtml
+++ b/template/page/header/minicart/product-item/remove.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Session\Cart\Item $item
+ * @var Lightna\Magento\Backend\Data\Session\Cart\Item $item
  * @var int $id
  */
 ?>
