--- a/template/page/header/search/suggestions.phtml
+++ b/template/page/header/search/suggestions.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Search\Suggestions $suggestions
+ * @var Lightna\Magento\Backend\Data\Search\Suggestions $suggestions
  */
 
 if (!$items = $suggestions->getItems()) {
