--- a/template/page/menu.phtml
+++ b/template/page/menu.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Content\Page $page
+ * @var Lightna\Magento\Backend\Data\Content\Page $page
  */
 ?>
 <nav class="main-navigation mobile-overlay no-js" data-overlay="menu">
