--- a/template/page/usp.phtml
+++ b/template/page/usp.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Content\Page $page
+ * @var Lightna\Magento\Backend\Data\Content\Page $page
  */
 ?>
 <?php if ($uspHtml = $page->uspHtml) : ?>
