--- a/template/product/attributes/all-visible.phtml
+++ b/template/product/attributes/all-visible.phtml
@@ -1,8 +1,8 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Product $product
- * @var Lightna\Magento\Data\Content\Product $productContent
+ * @var Lightna\Magento\Backend\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Content\Product $productContent
  */
 ?>
 <?php foreach ($productContent->visibleOnFrontAttributes as $attribute) { ?>
