--- a/template/product/attributes/sku.phtml
+++ b/template/product/attributes/sku.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Product $product
  */
 ?>
 <div class="product-sku"><?= $product->sku() ?></div>
