--- a/template/product/cta/add-to-cart.phtml
+++ b/template/product/cta/add-to-cart.phtml
@@ -2,7 +2,7 @@
 /**
  * Import:
  * @var Lightna\Engine\Data\Block $block
- * @var Lightna\Magento\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Product $product
  */
 ?>
 <div <?= $block->attributes() ?> data-product-id="<?= $product->entityId() ?>">
