--- a/template/product/options.phtml
+++ b/template/product/options.phtml
@@ -2,7 +2,7 @@
 /**
  * Import:
  * @var Lightna\Engine\Data\Block $block
- * @var Lightna\Magento\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Product $product
  */
 $options = $product->options;
 if (!$options->attributes) {
