--- a/template/product/usp.phtml
+++ b/template/product/usp.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Content\Product $productContent
+ * @var Lightna\Magento\Backend\Data\Content\Product $productContent
  */
 ?>
 <?php if ($uspHtml = $productContent->uspHtml) : ?>
