--- a/template/category/result.phtml
+++ b/template/category/result.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Product\Search $search
+ * @var Lightna\Magento\Backend\Data\Product\Search $search
  */
 ?>
 <div>
