--- a/template/cms/heading.phtml
+++ b/template/cms/heading.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Cms $entity
+ * @var Lightna\Magento\Backend\Data\Cms $entity
  */
 ?>
 <?php if ($heading = $entity->contentHeading()) { ?>
