--- a/template/component/product/tile/name.phtml
+++ b/template/component/product/tile/name.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Product $product
  */
 ?>
 <a class="product-tile__link" href="<?= $product->url() ?>"><?= $product->name() ?></a>
