--- a/template/page/header/account.phtml
+++ b/template/page/header/account.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Session $session
+ * @var Lightna\Magento\Backend\Data\Session $session
  */
 $isLoggedIn = $session->customer->groupId !== 0;
 $iconClass = $isLoggedIn ? 'icon-user__filled' : 'icon-user__outline';
