--- a/template/page/header/logo.phtml
+++ b/template/page/header/logo.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Config $config
+ * @var Lightna\Magento\Backend\Data\Config $config
  */
 $logo = $config->logo;
 ?>
