--- a/template/page/menu/item.phtml
+++ b/template/page/menu/item.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Content\Page\Menu\Item $item
+ * @var Lightna\Magento\Backend\Data\Content\Page\Menu\Item $item
  */
 ?>
 <?php if ($item->level > 3) return; ?>
