--- a/template/product/attributes/name.phtml
+++ b/template/product/attributes/name.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Product $product
  */
 ?>
 <h1><?= $product->name() ?></h1>
