--- a/template/product/description.phtml
+++ b/template/product/description.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Product $product
  */
 ?>
 <?= $product->description ?>
