--- a/template/product/stock.phtml
+++ b/template/product/stock.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
  * Import:
- * @var Lightna\Magento\Data\Product $product
+ * @var Lightna\Magento\Backend\Data\Product $product
  */
 ?>
 <?php if ($product->inventory->status) : ?>
