--- a/template/product/gallery.phtml
+++ b/template/product/gallery.phtml
@@ -41,7 +41,7 @@ $imageCount = count($product->gallery);
     </div>
     <?php if ($imageCount > 1) { ?>
         <div class="gallery-progress-bar">
-            <div class="gallery-progress" style="width: <?= 100 / $imageCount; ?>%;"></div>
+            <div class="gallery-progress"></div>
         </div>
     <?php } ?>
 </div>
