--- a/template/page/header/minicart.phtml
+++ b/template/page/header/minicart.phtml
@@ -7,7 +7,7 @@ $cart = $session->cart;
 ?>
 <div class="header__icon" data-click-action="open-minicart">
     <div class="icon icon-cart">
-        <?php if ($cart->qty() > 0) { ?>
+        <?php if ($cart->qty > 0) { ?>
             <div class="icon-counter"><?= $cart->qty() ?></div>
         <?php } ?>
     </div>
