--- a/template/component/toggle-link.phtml
+++ b/template/component/toggle-link.phtml
@@ -1,5 +1,4 @@
-<a href="#" class="toggle-link"
-   onclick="event.preventDefault(); this.classList.toggle('active');">
+<a href="#" class="toggle-link">
     <span class="off"><?= phrase('Show more') ?></span>
     <span class="on"><?= phrase('Show less') ?></span>
 </a>
