--- a/css/component/product/grid.css
+++ b/css/component/product/grid.css
@@ -1,5 +1,9 @@
 @layer components {
     .products-grid {
-        @apply grid grid-cols-2 gap-x-4 gap-y-6 md:grid-cols-2 md:gap-x-6 lg:grid-cols-3;
+        @apply grid grid-cols-2 gap-x-4 gap-y-6 md:gap-x-6 lg:grid-cols-3;
+    }
+
+    .products-grid--wide {
+        @apply grid grid-cols-2 gap-x-4 gap-y-6 md:gap-x-6 md:grid-cols-4;
     }
 }
