--- a/template/page/head/gtm.phtml
+++ b/template/page/head/gtm.phtml
@@ -2,6 +2,7 @@
 /**
  * Import:
  * @var Lightna\Magento\Backend\Data\Config $config
+ * @var Lightna\Engine\Data\Csp $csp
  */
 
 $ga = $config->ga;
@@ -10,9 +11,11 @@ if (!$ga->active || !$ga->account) {
 }
 ?>
 <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<script nonce="<?= $csp->nonce() ?>">
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
             new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','<?= $ga->account('url-param') ?>');</script>
+    })(window,document,'script','dataLayer','<?= $ga->account('url-param') ?>');
+</script>
 <!-- End Google Tag Manager -->
