--- a/css/component/product/grid.css
+++ b/css/component/product/grid.css
@@ -6,4 +6,8 @@
     .products-grid--wide {
         @apply grid grid-cols-2 gap-x-4 gap-y-6 md:gap-x-6 md:grid-cols-4;
     }
+
+    .products-grid--carousel {
+        @apply flex w-full overflow-hidden -mr-6;
+    }
 }
