--- a/css/component/product/related.css
+++ b/css/component/product/related.css
@@ -4,6 +4,11 @@
     }
 
     .related-products__title {
-        @apply border-b pb-4 text-xl md:text-3xl font-semibold;
+        @apply border-b pb-4 text-xl md:text-3xl font-semibold md:pr-24;
+    }
+
+    .related-products__products-grid + .products-placeholder,
+    #block-wrapper-related-products:has(.related-products__products-grid) + .products-placeholder {
+        @apply hidden;
     }
 }
