--- a/template/category/facets.phtml
+++ b/template/category/facets.phtml
@@ -2,6 +2,7 @@
 /**
  * Import:
  * @var Lightna\Magento\Backend\Data\Product\Search $search
+ * @var Lightna\Magento\Backend\Data\Currency $currency
  */
 ?>
 <div>
@@ -23,9 +24,20 @@
             <?php $collapsibleActive = $facet->position < 5 || $facet->isInUse ?>
             <div class="cjs-collapsible facets__item__container <?= $collapsibleActive ? 'collapsible--active' : '' ?>">
                 <?php if ($facet->type === 'range') { ?>
-                    <div class="py-4">
-                        <span class="font-normal">Range <?= $facet->label() ?>:</span>
-                        <?= $facet->min() ?> - <?= $facet->max() ?>
+                    <div class="collapsible__trigger facets__item__title" data-click-action="toggle-collapsible">
+                        <?= $facet->label() ?>, <?= $currency->renderSymbol() ?>
+                        <span class="icon" aria-hidden="true"></span>
+                    </div>
+                    <div class="cjs-collapsible-content collapsible__content">
+                        <div class="facet__item--range" data-facet-type="range" data-facet-code="<?= $facet->code() ?>">
+                            <input type="text" value="<?= $facet->currMin() ?>" autocomplete="off"
+                                   data-current="<?= $facet->currMin() ?>"
+                                   placeholder="<?= $facet->min() ?>" /> -
+                            <input type="text" value="<?= $facet->currMax() ?>" autocomplete="off"
+                                   data-current="<?= $facet->currMax() ?>"
+                                   placeholder="<?= $facet->max() ?>" />
+                            <button type="button" disabled><?= phrase('OK') ?> </button>
+                        </div>
                     </div>
                 <?php } ?>
                 <?php if ($facet->type === 'option') { ?>
