--- a/template/category/result.phtml
+++ b/template/category/result.phtml
@@ -4,7 +4,7 @@
  * @var Lightna\Magento\Backend\Data\Product\Search $search
  */
 ?>
-<?php if (!count($search->result)) { ?>
+<?php if (!count($search->items)) { ?>
     <div class="no-results"><?= phrase('We can\'t find products matching the selection.') ?></div>
 <?php } else { ?>
     <?= block('grid') ?>
